--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <a href="index.html">
          <img src="images/logo.png" class = "logo">
      </a>
-     
+
      <ul>
          <li><a href="about.html">О нас</a></li>
          <li><a href="index3.html">Наша продукция</a></li>
@@ -45,7 +45,7 @@
  	<ul class="ul2">
         <li><a href="https://www.instagram.com/tereshyn_max/?hl=ru"><img src="images/instagram.png"></a></li>
         <li><a href="https://www.facebook.com/maks.tereshin.1?ref=bookmarks"><img src="images/facebook.png"></a></li>
-     
+
     </ul>
     <ul class="ul1">
     	<li><a href="https://secure.skype.com/portal/profile"><img src="images/skype-social-outlined-logo.png"></a> maks_tereshin</li>
@@ -53,5 +53,5 @@
     	<li><a href="https://plus.google.com/u/0/101860147712905287090"><img src="images/google-plus-outlined-logo-social-symbol.png"></a>maksimkatereshin904@gmail.com</li>
     </ul>
 </footer>
-
+<p>ssss</p>
 </html>
